admin set method implemented

--- a/DiscordEventBot.Common/Resources/Resources.de.resx
+++ b/DiscordEventBot.Common/Resources/Resources.de.resx
@@ -129,6 +129,12 @@
   <data name="txt_cmd_help_help_sum" xml:space="preserve">
     <value>Zeigt jeden Befehl den du benutzen kannst.</value>
   </data>
+  <data name="txt_mod_admset_cmd_setac_param_channel_sum" xml:space="preserve">
+    <value>Der zu verwendende Kanal</value>
+  </data>
+  <data name="txt_mod_admset_cmd_setac_sum" xml:space="preserve">
+    <value>Legt einen Ankündigungskanal fest, den der Bot für Ankündigungen wie neue oder anstehende Ereignisse verwenden kann</value>
+  </data>
   <data name="txt_mod_admset_cmd_setadminrole_param_role_sum" xml:space="preserve">
     <value>Die Rolle, der der Zugriff auf bestimmte Befehle gewährt werden soll.</value>
   </data>
