--- a/DiscordEventBot.Common/Resources/Resources.de.resx
+++ b/DiscordEventBot.Common/Resources/Resources.de.resx
@@ -394,6 +394,9 @@ Alle Parameter werden mit einem Leerzeichen voneinander getrennt. Wenn Sie ein L
   <data name="txt_msg_eventnotification" xml:space="preserve">
     <value>{0} von Server {1} beginnt um {2:t} Uhr</value>
   </data>
+  <data name="txt_msg_eventupcomming" xml:space="preserve">
+    <value>Dieses Ereignis beginnt in {0}</value>
+  </data>
   <data name="txt_msg_groupfull" xml:space="preserve">
     <value>Diese Gruppe ist bereits voll. Bitte treten Sie einer anderen Gruppe bei.</value>
   </data>
