--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -394,6 +394,9 @@ All parameters are separated by a space. If you want to use a space within a par
   <data name="txt_msg_eventnotification" xml:space="preserve">
     <value>{0} from server {1} is starting at {2:t}</value>
   </data>
+  <data name="txt_msg_eventupcomming" xml:space="preserve">
+    <value>This event is starting in {0}</value>
+  </data>
   <data name="txt_msg_groupfull" xml:space="preserve">
     <value>This group is already full. Please join another group.</value>
   </data>
