--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -129,6 +129,12 @@
   <data name="txt_cmd_help_help_sum" xml:space="preserve">
     <value>Displays every command that you can use</value>
   </data>
+  <data name="txt_mod_admset_cmd_setac_param_channel_sum" xml:space="preserve">
+    <value>The channel to be used</value>
+  </data>
+  <data name="txt_mod_admset_cmd_setac_sum" xml:space="preserve">
+    <value>Sets an announcement channel that the bot can use for announcements like new or upcomming events</value>
+  </data>
   <data name="txt_mod_admset_cmd_setadminrole_param_role_sum" xml:space="preserve">
     <value>The role that should be given access to certain commands.</value>
   </data>
@@ -387,6 +393,9 @@ All parameters are separated by a space. If you want to use a space within a par
   </data>
   <data name="txt_msg_eventnotification" xml:space="preserve">
     <value>{0} from server {1} is starting at {2:t}</value>
+  </data>
+  <data name="txt_msg_eventupcomming" xml:space="preserve">
+    <value>This event is starting in {0}</value>
   </data>
   <data name="txt_msg_groupfull" xml:space="preserve">
     <value>This group is already full. Please join another group.</value>
